--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rsmq_async"
+name = "rsmq"
 version = "9.0.0"
 authors = [
     "David Bonet <webbonet@gmail.com>"
@@ -16,16 +16,12 @@ readme = "README.md"
 lazy_static = "^1"
 rand = "^0.8"
 radix_fmt = "^1"
-bb8 = "^0.8"
+r2d2 = { git = "https://github.com/GopherJ/r2d2", rev = "976ca74a74871d78764da2a040edcadad1af9be9" }
 thiserror = "^1"
 redis = { version = "^0.25", default-features = false, features = ["acl", "keep-alive", "script"] }
-async-trait = "^0.1"
 
 [dev-dependencies]
 net2 = "^0.2"
-tokio = { version = "^1", features = ["rt-multi-thread"]}
+tokio = { version = "^1", features = ["full"]}
 
 [features]
-default = ["tokio-comp"]
-tokio-comp = ["redis/tokio-comp"]
-async-std-comp = ["redis/async-std-comp"]
