--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ radix_fmt = "^1"
 r2d2 = { version = "^0.8" }
 thiserror = "^1"
 redis = { version = "^0.25", default-features = false, features = ["acl", "keep-alive", "script"] }
+serde_json = "1.0"
+hex = "0.4.3"
 
 [dev-dependencies]
 net2 = "^0.2"
